--- a/ShelfSpace-Frontend/CSS/OverviewPage.css
+++ b/ShelfSpace-Frontend/CSS/OverviewPage.css
@@ -16,27 +16,30 @@ body {
 /* Linke Seitenleiste */
 #sidebar {
     background-color: #1e1e1e;
-    padding: 20px;
+    padding: 10px;
     width: 250px;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: flex-start;
 }
 
 #sidebar h2 {
     color: #ffffff;
+    margin: 10px;
 }
 
 #sidebar ul {
     list-style-type: none;
-    padding: 0;
+    padding: 0; /* Padding des ul-Elements entfernen */
+    margin-top: 20px; /* Optional: Abstand nach oben einstellen */
 }
 
 #sidebar ul li {
-    margin: 20px 0;
+    margin: 10px; /* Den vertikalen Abstand zwischen den Listenelementen steuern */
     cursor: pointer;
     color: #cccccc;
     font-size: 18px;
+    margin-top: 2px;
 }
 
 #sidebar ul li:hover {
@@ -45,14 +48,15 @@ body {
 
 /* Logout-Button */
 #backToAccountButton {
-    background-color: #333;
-    color: #ffffff;
+    margin-top: auto; /* Automatischer Abstand oben, um den Button ganz nach unten zu schieben */
+    padding: 10px;
+    font-size: 0.9rem;
+    background-color: #3b3b3b;
+    color: white;
     border: none;
     border-radius: 5px;
-    padding: 10px;
     cursor: pointer;
-    margin-top: 20px;
-    width: 100%;
+    transition: background-color 0.3s ease;
 }
 
 #backToAccountButton:hover {
