--- a/ShelfSpace-Frontend/CSS/SearchView.css
+++ b/ShelfSpace-Frontend/CSS/SearchView.css
@@ -48,7 +48,7 @@ input[type="text"] {
 }
 
 /* Buttons */
-button, #backButton, #backToAccountButton {
+button, #backButton, #backToShelfspace {
     padding: 10px;
     font-size: 1.2rem;
     background-color: #3b3b3b; /* Dunkler Button */
