--- a/ShelfSpace-Frontend/CSS/SearchView.css
+++ b/ShelfSpace-Frontend/CSS/SearchView.css
@@ -111,3 +111,41 @@ img {
     border-radius: 5px;
     border: 1px solid #444; /* Umrandung für das Bild */
 }
+
+.modal {
+    display: none; /* Standardmäßig versteckt */
+    position: fixed; /* Fixiere die Modalansicht */
+    z-index: 1000; /* Stellt sicher, dass das Modal im Vordergrund ist */
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.8); /* Halbtransparenter Hintergrund */
+    justify-content: center;
+    align-items: center;
+    overflow-y: auto; /* Ermöglicht das Scrollen im Modal, wenn der Inhalt zu groß ist */
+}
+
+.modal-content {
+    background-color: #121212;
+    padding: 20px;
+    border-radius: 5px;
+    max-width: 600px;
+    width: 100%;
+    max-height: 80%; /* Beschränkt die Höhe des Modals */
+    overflow-y: auto; /* Modal-Inhalt scrollbar machen */
+}
+
+body.modal-open {
+    overflow: hidden; /* Deaktiviert das Scrollen des restlichen Inhalts, wenn das Modal geöffnet ist */
+}
+#modalCover {
+    width: 100%; /* Füllt die Breite des Containers */
+    height: auto; /* Höhe passt sich proportional an */
+    max-width: 200px; /* Begrenzung der maximalen Breite */
+    max-height: 300px; /* Begrenzung der maximalen Höhe */
+    margin-bottom: 20px; /* Abstand nach unten für etwas Luft */
+    object-fit: contain; /* Sorgt dafür, dass das Bild in den Bereich passt, ohne verzerrt zu werden */
+    border-radius: 5px; /* Optional: Abgerundete Ecken */
+    border: 1px solid #444; /* Optional: Bildumrandung */
+}
