--- a/ShelfSpace-Frontend/CSS/SearchView.css
+++ b/ShelfSpace-Frontend/CSS/SearchView.css
@@ -159,6 +159,7 @@ body.modal-open {
 
 .add-button {
     margin-left: auto;
+    margin-right: 5px;
     padding: 5px 10px;
     background-color: #4a4a4a;
     color: #e0e0e0;
