--- a/ShelfSpace-Frontend/CSS/HomePage.css
+++ b/ShelfSpace-Frontend/CSS/HomePage.css
@@ -168,6 +168,21 @@ body {
     align-items: center;
 }
 
+.delete-shelf-button{
+    background-color: #181818;
+    color: #ffffff;
+    border-radius: 5px;
+    padding: 10px;
+    text-align: center;
+    width: 100px;
+    cursor: pointer;
+    border: none;
+    transition: background-color 0.3s ease;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .add-book-button:hover {
     background-color: #444;
 }
