--- a/ShelfSpace-Frontend/CSS/HomePage.css
+++ b/ShelfSpace-Frontend/CSS/HomePage.css
@@ -21,11 +21,39 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+    position: sticky; /* Sticks to the top when scrolling */
+    overflow-y: auto; /* Allows scrolling within the sidebar if needed */
+}
+
+/* Styling für Links */
+#sidebar ul li a {
+    display: block;
+    color: #ecf0f1;
+    text-decoration: none;
+    font-size: 1.1em;
+    padding: 10px 15px;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+    font-family: 'Arial', sans-serif;
+}
+
+/* Optional: Hover-Effekt für Links */
+#sidebar ul li a:hover {
+    background-color: #34495e;
+}
+
+
+
+/* Hover-Effekt für Links */
+#sidebar ul li a:hover {
+    background-color: #34495e;
 }
 
 #sidebar h2 {
     color: #ffffff;
+    font-size: 28px;
     margin: 10px;
+    margin-left: 25px;
 }
 
 #sidebar ul {
@@ -129,17 +157,19 @@ body {
     background-color: #333;
     color: #ffffff;
     border-radius: 5px;
-    padding: 10px;
+    padding: 20px;
     text-align: center;
     width: 120px;
     cursor: pointer;
+    font-weight: 800;
 }
 
 .book img {
     width: 100px;
     height: 150px;
     object-fit: cover;
-    border-radius: 5px;
+    border-radius: 0px;
+    border-color: white;
 }
 
 .book p {
@@ -152,6 +182,20 @@ body {
     background-color: #444;
 }
 
+.delete-book-button{
+    margin-top: auto; /* Automatischer Abstand oben, um den Button ganz nach unten zu schieben */
+    padding: 8px;
+    font-size: 0.7rem;
+    background-color: #f43d3d;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+
+
+}
+
 /* Anpassung des Add-Book-Buttons */
 .add-book-button {
     background-color: #333;
@@ -161,7 +205,7 @@ body {
     text-align: center;
     width: 100px;
     cursor: pointer;
-    border: none;
+    border: white;
     transition: background-color 0.3s ease;
     display: flex;
     justify-content: center;
